--- a/103_linear_expansion/main.tex
+++ b/103_linear_expansion/main.tex
@@ -8,6 +8,8 @@
 \usepackage{graphicx}         % wstawianie obrazków
 \usepackage{siunitx}          % poprawne jednostki
 \usepackage{hyperref}         % linki w PDF
+\usepackage{csvsimple}
+\usepackage{booktabs}
 
 \title{Linear Thermal Expansion Experiment} % tytuł raportu
 \author{Roland Sobczak}
@@ -55,32 +57,34 @@ The procedure was as follows:
 \end{enumerate}
 
 \section{Wyniki}
-Tutaj wstawiasz wyniki, np. tabelki i równania.
 
-Przykładowe równanie:
-\begin{equation}
-    F = m \cdot a
-\end{equation}
+Tutaj przedstawiono wyniki pomiarów oraz wyliczone współczynniki rozszerzalności liniowej dla trzech metali.
 
-Przykładowa tabela:
-\begin{tabular}{c c c}
-Czas [s] & Droga [m] & Prędkość [m/s] \\
-\hline
-1 & 0.5 & 0.5 \\
-2 & 2.0 & 1.0 \\
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=1\textwidth]{expansion_plot.png}
+    \caption{Thermal expansion of metal rods.}
+    \label{fig:expansion_plot}
+\end{figure}
+
+\subsection*{Wyznaczone współczynniki}
+
+\begin{tabular}{l c c}
+\toprule
+Metal & a [mm/°C] & $\alpha$ [1/°C] \\
+\midrule
+Copper & 0.013813 & $1.791 \cdot 10^{-5}$ \\
+Brass  & 0.014608 & $1.894 \cdot 10^{-5}$ \\
+Steel  & 0.009425 & $1.219 \cdot 10^{-5}$ \\
+\bottomrule
 \end{tabular}
+
+\subsection*{Pełne dane pomiarowe}
+
+\csvautotabular[respect all]{measurmentsout.csv}
 
 \section{Wnioski}
 Tutaj wpisujesz wnioski z doświadczenia.
-
-% Wstawianie obrazka
-\section{Rysunki}
-%\begin{figure}[h]
-    %\centering
-    %\includegraphics[width=0.5\textwidth]{nazwa_rysunku.png} % podaj nazwę pliku
-    %\caption{Opis rysunku.}
-    %\label{fig:przyklad}
-%\end{figure}
 
 \end{document}
 
