feat: conclusions section added

--- a/103_linear_expansion/main.tex
+++ b/103_linear_expansion/main.tex
@@ -83,8 +83,17 @@ Steel  & 0.009425 & $1.219 \cdot 10^{-5}$ \\
 
 \csvautotabular[respect all]{measurmentsout.csv}
 
-\section{Wnioski}
-Tutaj wpisujesz wnioski z doświadczenia.
+\section{Conclusions}
+
+Based on the conducted measurements and data analysis, the following conclusions can be drawn:
+
+\begin{itemize}
+    \item All three tested metals exhibit an almost linear relationship between length change and temperature within the examined range.
+    \item Brass shows the highest linear expansion, followed by copper, and steel has the lowest.
+    \item The determined coefficients $\alpha$ are consistent with typical literature values for these materials.
+    \item The linear expansion coefficient allows predicting the rod's length change as a function of temperature, which is important for designing metal structures exposed to temperature fluctuations.
+    \item The linear fitting method is appropriate within the range of small temperature changes, where the linear approximation of thermal expansion holds.
+\end{itemize}
 
 \end{document}
 
