--- a/103_linear_expansion/main.tex
+++ b/103_linear_expansion/main.tex
@@ -1,27 +1,30 @@
-\documentclass[a4paper,12pt]{article} % typ dokumentu i rozmiar czcionki
+\documentclass[a4paper,12pt]{article}
 
-% Pakiety przydatne w fizyce
-\usepackage[utf8]{inputenc}   % kodowanie pliku
-\usepackage[T1]{fontenc}      % polskie znaki
-\usepackage[polish]{babel}    % język dokumentu
-\usepackage{amsmath, amssymb} % matematyka
-\usepackage{graphicx}         % wstawianie obrazków
-\usepackage{siunitx}          % poprawne jednostki
-\usepackage{hyperref}         % linki w PDF
+% Useful packages for physics experiments
+\usepackage[utf8]{inputenc}   % file encoding
+\usepackage[T1]{fontenc}      % proper font encoding
+\usepackage[english]{babel}   % document language
+\usepackage{amsmath, amssymb} % mathematics
+\usepackage{graphicx}         % images
+\usepackage{siunitx}          % units
+\usepackage{hyperref}         % PDF links
 \usepackage{csvsimple}
 \usepackage{booktabs}
+\usepackage{fontspec}   % dla XeLaTeX lub LuaLaTeX
+\setmainfont{Times New Roman} % lub inna czcionka obsługująca Δ
+\usepackage{float}
 
-\title{Linear Thermal Expansion Experiment} % tytuł raportu
+\title{Linear Thermal Expansion Experiment}
 \author{Roland Sobczak}
-\date{\today} % data - automatycznie dzisiejsza
+\date{\today}
 
 \begin{document}
 
-\maketitle % generuje tytuł
+\maketitle
 
 \section{Introduction}
 
-The aim of this experiment is to investigate the phenomenon of linear thermal expansion of solid materials and to determine the linear expansion coefficient of the tested material.
+The aim of this experiment is to investigate the phenomenon of linear thermal expansion of solid materials and to determine the linear expansion coefficient of the tested materials.
 
 Thermal expansion is the change in the dimensions of a body due to a change in temperature. For small temperature changes, the length of a body changes proportionally to the temperature difference, according to the relation:
 \begin{equation}
@@ -35,11 +38,11 @@ where:
     \item $\alpha$ – linear expansion coefficient.
 \end{itemize}
 
-This experiment allows us to verify this relationship and determine the value of $\alpha$ for a specific material, such as a metal, which is important when designing structures exposed to temperature variations.
+This experiment allows us to verify this relationship and determine the value of $\alpha$ for metals, which is important when designing structures exposed to temperature variations.
 
 \section{Experimental Procedure}
 
-During the experiment, we measured the lengths of rods made from three different metals:
+During the experiment, the lengths of rods made from three different metals were measured:
 \begin{enumerate}
     \item Copper
     \item Brass
@@ -49,16 +52,14 @@ During the experiment, we measured the lengths of rods made from three different
 The procedure was as follows:
 
 \begin{enumerate}
-    \item First, we measured the initial absolute length of each rod. The measuring device had an accuracy of 0.05 mm. The initial temperature was 24.2°C.
-    
-    \item Next, we increased the temperature in steps of 5°C and measured the change in length relative to the initial length. For these measurements, the device had an accuracy of 0.01 mm. 
-    
-    \item For simplification, the measurements were performed at slightly different temperatures for each rod. Therefore, in the results section, the exact temperature for each measurement will be reported. The thermometer measured the temperature with an accuracy of 0.1°C.
+    \item First, the initial absolute length of each rod was measured. The measuring device had an accuracy of 0.05 mm. The initial temperature was 24.2°C.
+    \item Next, the temperature was increased in steps of 5°C and the change in length relative to the initial length was measured. Measurements were done with an accuracy of 0.01 mm.
+    \item For simplification, measurements were performed at slightly different temperatures for each rod. The exact temperature for each measurement is reported in the results. The thermometer had an accuracy of 0.1°C.
 \end{enumerate}
 
-\section{Wyniki}
+\section{Results}
 
-Tutaj przedstawiono wyniki pomiarów oraz wyliczone współczynniki rozszerzalności liniowej dla trzech metali.
+The following section presents the measured data and the calculated linear expansion coefficients for the three metals.
 
 \begin{figure}[h]
     \centering
@@ -67,21 +68,43 @@ Tutaj przedstawiono wyniki pomiarów oraz wyliczone współczynniki rozszerzalno
     \label{fig:expansion_plot}
 \end{figure}
 
-\subsection*{Wyznaczone współczynniki}
+\subsection*{Determined Coefficients}
 
+The coefficients $a$ and the linear expansion coefficient $\alpha$ were calculated using a linear fit of the measured length change $\Delta L$ as a function of temperature $T$ for each metal:
+
+\begin{equation}
+    \Delta L = a \, T + b
+\end{equation}
+
+Here, $a$ [mm/°C] is the slope of the fitted line, and $b$ is the intercept. The linear expansion coefficient $\alpha$ [1/°C] was then calculated by dividing the slope $a$ by the initial rod length $L_0$:
+
+\begin{equation}
+    \alpha = \frac{a}{L_0}
+\end{equation}
+
+\begin{table}[H]
+\centering
 \begin{tabular}{l c c}
 \toprule
-Metal & a [mm/°C] & $\alpha$ [1/°C] \\
+Metal & $a$ [mm/°C] & $\alpha$ [1/°C] \\
 \midrule
 Copper & 0.013813 & $1.791 \cdot 10^{-5}$ \\
 Brass  & 0.014608 & $1.894 \cdot 10^{-5}$ \\
 Steel  & 0.009425 & $1.219 \cdot 10^{-5}$ \\
 \bottomrule
 \end{tabular}
+\caption{Determined linear expansion coefficients.}
+\end{table}
 
-\subsection*{Pełne dane pomiarowe}
+\subsection*{Measured Length Changes}
 
-\csvautotabular[respect all]{measurmentsout.csv}
+% Display only the length differences for all three metals
+\begin{tabular}{c c c}
+\hline
+\textbf{Copper ΔL [mm]} & \textbf{Brass ΔL [mm]} & \textbf{Steel ΔL [mm]} \\
+\hline
+\csvautotabular[respect all]{measurements.csv}
+\end{tabular}
 
 \section{Conclusions}
 
@@ -96,4 +119,3 @@ Based on the conducted measurements and data analysis, the following conclusions
 \end{itemize}
 
 \end{document}
-
